--- a/ERB/SYSTEM/컨피그/CONFIG_초기설정.ERB
+++ b/ERB/SYSTEM/컨피그/CONFIG_초기설정.ERB
@@ -1,61 +1,61 @@
 ﻿
-;ゲーム開始時に呼び出す컨피그の初期설정
-;プリセットを増やす場合はCONFIG_SYSTEM.ERBとにらめっこしてください
+;게임 시작 시 호출하는 컨피그의 초기 설정
+;프리셋을 늘릴 경우에는 CONFIG_SYSTEM.ERB를 참조해 주세요
 @CONFIG_INIT(ARG)
 SELECTCASE ARG
 
-	;■グローバルデータから引き継ぎ
+	;■글로벌 데이터에서 인계
 	CASE 0
-		;800:컨피그설정関係(GLOBALの自動ロード)
+		;800:컨피그 설정 관련(GLOBAL 자동 로드)
 		FLAG:800 = 1
 		FLAG:801 = GLOBAL:11
 		FLAG:802 = GLOBAL:12
 		FLAG:803 = GLOBAL:13
 		FLAG:804 = GLOBAL:14
 		FLAG:805 = GLOBAL:15
-	;■基本セット(初期～0.394以前に準拠、vs촉수以外の各要素は控えめ)
+	;■기본 세트(초기～0.394 이전에 준거, vs촉수 이외의 각 요소는 삼가)
 	CASE 1
-		;800:컨피그설정関係(＋自動ロードOFFに)
+		;800:컨피그 설정 관련(＋자동 로드를 OFF로)
 		FLAG:800 = 0
-		;801:画面表示関係 0(素質のカテゴリ表示)
+		;801:화면 표시 관련 0(소질의 카테고리 표시)
 		FLAG:801 = 1
-		;802:イベント関連 0123(악질 시민イベントまでON)
+		;802:이벤트 관련 0123(악질 시민 이벤트까지 ON)
 		FLAG:802 = 1+2+4+8
-		;803:ゲームバランス変更 012(オート振り解きまでON)8(行動不能時必中)
+		;803:게임 밸런스 변경 012(자동 풀어내기 옵션까지 ON) 8(행동 불능 시 필중)
 		FLAG:803 = 1+2+4        +256
-		;804:유폐オプション 0(男は유폐時に女体化)
+		;804:유폐 옵션 0(남자는 유폐 시에 여체화)
 		FLAG:804 = 1
-		;805:その他オプション(항복한다使用) 
+		;805:기타 옵션(항복한다 사용) 
 		FLAG:805 = 2
 
-	;■淫獄セット(要素盛り多め)
+	;■음옥 세트(요소 발정 가득)
 	CASE 2
-		;800:컨피그설정関係
+		;800:컨피그 설정 관련
 		FLAG:800 = 0
-		;801:画面表示関係(＋ウェイト削減、미성숙代替素質)
+		;801:화면 표시 관련(＋WAIT 구문 삭감, 미성숙 대체 소질)
 		FLAG:801 = 1    +8+16
-		;802:イベント関連(＋ザコ敵戦)
+		;802:이벤트 관련(＋잡몹과의 전투)
 		FLAG:802 = 1+2+4+8+16
-		;803:ゲームバランス変更(＋쾌A増加)
+		;803:게임 밸런스 변경(＋쾌A 증가)
 		FLAG:803 = 1+2+4+128+256
-		;804:유폐オプション (＋흑화あり(好み分かれそうな肌の色のみ除く))
+		;804:유폐 옵션 (＋흑화 있음(호불호가 갈릴 것 같은 피부색만 제외))
 		FLAG:804 = 1+2+4  +16+32+64+128
-		;805:その他オプション (촉수からも娘出産・裏プロフィール使用)
+		;805:기타 옵션 (촉수로부터도 딸 출산・뒷 프로필 사용)
 		FLAG:805 = 1+2+64
 
-	;■악질 시민セット(＋악질 시민関連が全開放)
+	;■악질 시민 세트(＋악질 시민 관련 컨피그를 모두 개방)
 	CASE 3
-		;800:컨피그설정関係
+		;800:컨피그 설정 관련
 		FLAG:800 = 0
-		;801:画面表示関係
+		;801:화면 표시 관련
 		FLAG:801 = 1    +8+16
-		;802:イベント関連(ナンパレイプ時に악질 시민戦ON)
+		;802:이벤트 관련(헌팅남 강간 시에 악질 시민전 ON)
 		FLAG:802 = 1+2+4+8+16+32
-		;803:ゲームバランス変更
+		;803:게임 밸런스 변경
 		FLAG:803 = 1+2+4+128+256
-		;804:유폐オプション (악질 시민脅迫유폐ON)
+		;804:유폐 옵션 (악질 시민 협박 유폐 ON)
 		FLAG:804 = 1+2+4  +16+32+64+128   +1024
-		;805:その他オプション
+		;805:기타 옵션
 		FLAG:805 = 1+2+64
 
 ENDSELECT
