--- a/ERB/게임_내_이벤트발생/오프닝처리.ERB
+++ b/ERB/게임_내_이벤트발생/오프닝처리.ERB
@@ -432,6 +432,7 @@ PRINTL [1] 캐릭터가 붙잡혀 버린다면
 PRINTL [2] 자금에 대하여
 PRINTL [3] 게임성을 변화시키는 옵션
 PRINTL [4] 그래도 좀 어렵다고 느껴지신다면 (스포일러 주의)
+PRINTL  ┗(구버전의 내용이 포함된 항목입니다.)
 PRINTL [999] 돌아간다
 $INPUT_LOOP_TUTORIAL
 INPUT
@@ -494,22 +495,29 @@ ELSEIF RESULT == 3
 	PRINTL 게임성을 변화시키는 옵션이 몇 가지 존재합니다.
 	PRINTL 이러한 설정들은 임의로 변경할 수 있습니다.
 	PRINTL 
-	PRINTL 유폐 촉수 조우율 향상　　　 캐릭터를 유폐한 보스와의 조우율이 오릅니다.　　　　　　　 (난이도: 감소)
-	PRINTL 색적 타겟 기능　　　　　　　한 번 조우한 보스와의 조우율이 오릅니다.　　　　 　　 　　(난이도: 감소)
-	PRINTL 자동 풀어내기　　　 　　　　구속되었을 때 자동으로「풀어낸다」를 사용합니다. 　　　 　(난이도: 감소)
-	PRINTL 착정 강화 기능　　　　　　　보스의 정액에서 파워를 흡수합니다.　　　　　　　　　　　　(난이도: 감소)
-	;원문은 返り血機能 피가 튐 기능
-	PRINTL 촉수혈 기능　　　　　　　　 보스 촉수를 격파하며 묻은 피가 몸을 더 음란하게 만듭니다. (난이도: 상승)
-	PRINTL 최종 보스 강화 기능　　　　 최종 보스의 HP가 크게 늘어납니다.　　　　　　 　　　　　  (난이도: 상승)
+	PRINTL 유폐 촉수 조우율 향상　　　 캐릭터를 유폐한 보스와의 조우율이 오릅니다.　　　　　　　　난이도：감소
+	PRINTL 색적 타겟 기능　　　　　　　한 번 조우한 보스와의 조우율이 오릅니다.　　　　 　　 　　 난이도：감소
+	PRINTL 자동 풀어내기 기능　　　　　구속되었을 때 자동으로「풀어낸다」를 사용합니다. 　　　 　 난이도：감소
+	PRINTL 착정 강화 기능　　　　　　　보스의 정액에서 파워를 흡수합니다.　　　　　　　　　　　　 난이도：감소
+	;원문은 返り血機能 피가 튐 기
+	PRINTL 촉수혈 기능　　　　　　　　 보스 촉수를 격파하며 묻은 피가 몸을 더 음란하게 만듭니다.　난이도：상승
+	PRINTL 최종 보스 강화 기능　　　　 최종 보스의 HP가 크게 늘어납니다.　　　　　　 　　　　　　 난이도：상승
 	;원문은 力尽きても変身が解けない
-	PRINTL 강제 변신 해제 무효　　　　 기력이 0이 되어도 변신이 풀리지 않게 됩니다.　　　　　　 (난이도: 대감소)
+	PRINTL 강제 변신 해제 무효　　　　 기력이 0이 되거나 절정에 이르러도 변신이 풀리지 않습니다.　난이도：대감소
+	PRINTL A감각이 낮을 시 쾌A 증가　  캐릭터의 A감각이 낮을 때 받는 쾌A가 증가하게 됩니다.　　　 난이도：상승
+	;원문은 行動不能のヒロインを敵が正確に狙う
+	PRINTL 행동 불능 시 확정 피격　　　캐릭터의 체력/기력이 저하되면 적의 공격을 피하지 못합니다. 난이도：상승
+	PRINTL
+	PRINTL 묘상화 캐릭터 임신 셔틀화　 묘상화를 취득한 캐릭터는 흑화하기 어려워져 그대로 거두어질 가능성이 높아집니다.
 	PRINTL 
-	PRINTL 딸 육성　　　　　　　　　　 임신하여 태어난 딸을 동료로 삼을 수 있습니다.
-	PRINTL 남자 캐릭터 패배 시 여체화　남자 캐릭터가 촉수에게 패배하면 여자로 TS화됩니다.
-	PRINTL 항복 커맨드　　　　　　 　　일부러 지고 싶을 때의 항복 커맨드를 사용 가능하게 합니다.
-	PRINTL 묘상화 시 임신 셔틀화　　　 묘상화를 취득한 경우에만 세뇌/흑화 하기가 어려워집니다.
+	PRINTL 촉수에 의한 딸 임신 가능성　촉수에게 잉태되어도 딸을 임신하게 될 가능성이 생깁니다.
+	;PRINTL 남자 캐릭터 패배 시 여체화　남자 캐릭터가 촉수에게 패배하면 여자로 TS화됩니다.
+	PRINTL 항복 커맨드를 사용한다　　　일부러 지고 싶을 때의 항복 커맨드를 사용 가능하게 합니다.
+	PRINTL 캐릭터의 성처녀 유지　　　　적의 성공격에 의한 처녀 상실을 억제합니다.
+	PRINTL 　　　　　　　　　　　　　　단, V촉수에게 유폐되어 V고문을 당하는 경우 처녀를 상실합니다.
+	PRINTL 뒷 프로필을 사용한다　　　　캐릭터가 조교되어 감각이 오름에 따라 점점 음탕한 칭호가 새겨집니다.
 	;원문은 陥落せずに取り込まれる
-	PRINTL 세뇌/흑화 없음　　　　　    촉수에게 붙잡힐 시 세뇌/흑화하지 않고 무조건 거두어져 사망합니다.
+	;PRINTL 세뇌/흑화 없음　　　　　    촉수에게 붙잡힐 시 세뇌/흑화하지 않고 무조건 거두어져 사망합니다.
 	PRINTW 
 	GOTO TUTORIAL
 ELSEIF RESULT == 4
