--- a/ERB/SYSTEM/컨피그/CONFIG_SYSTEM.ERB
+++ b/ERB/SYSTEM/컨피그/CONFIG_SYSTEM.ERB
@@ -1,71 +1,71 @@
-﻿;それぞれの컨피그ごとにbitで値を保持
-;直接弄るならSETBIT,GETBITなどを使用するが、
-;混乱を避けるために
-;	・ビット直接操作ではなく下記の種類別関数を利用する
-;	・挙動一貫性のために「〇〇しない」は用いず、「〇〇する==有効なら判定結果１」で極力揃える
+﻿;각각의 컨피그마다 bit로 값을 유지
+;직접 건드리려면 SETBIT,GETBIT 등을 사용하면 되지만,
+;혼란을 피하기 위해서
+;	・비트 직접 조작이 아닌 아래의 종류별 함수를 이용한다
+;	・동작 일관성을 위해「〇〇하지 않는다(しない)」는 쓰지 않고,「〇〇한다(する)==유효라면 판정 결과 １」로 최대한 갖춘다
 ;
-;凡例カテゴリ　フラグ　参照に使う関数()
-;0  nビット目に相当するフラグであるか
+;범례 카테고리　플래그　참조에사용하는함수()
+;0  n비트째에 해당하는 플래그인지
 ;
 ;
 ;
-;컨피그설정関係	FLAG:800	判定式：CONFIG_CHECK_MAIN_F(num)
-;0	필터ー系컨피그설정(GLOBAL)の自動ロード
+;컨피그 설정 관련	FLAG:800	판정식：CONFIG_CHECK_MAIN_F(num)
+;0	필터ー系컨피그 설정(GLOBAL)の自動ロード
 ;
-;画面表示関係		FLAG:801	判定式：CONFIG_CHECK_SCREEN_F(num)
-;0	素質のカテゴリ表示
-;1	戦闘中の調教스테이터스 표시
-;2	コマンドカテゴリ表示
-;3	一部ウェイトの削減
-;4	消去した素質(미성숙)の表示
-;5～8　戦闘画面の調教스테이터스 표시
+;화면 표시 관련		FLAG:801	판정식：CONFIG_CHECK_SCREEN_F(num)
+;0	소질 카테고리 표시
+;1	전투 중 조교 스테이터스 표시
+;2	커맨드 카테고리 표시
+;3	일부 WAIT 구문 삭감 (一部ウェイトの削減)
+;4	소거한 소질(미성숙) 표시
+;5～8　전투 화면의 조교 스테이터스 표시
 ;
-;イベント関連		FLAG:802	判定式：CONFIG_CHECK_EVENT_F(num)
-;0	보스襲撃イベント
-;1	새끼 촉수の夜這い
-;2	仲間による夜這い
-;3	악질 시민イベント
-;4	잡몹적との戦闘
-;5	악질 시민との戦闘
-;6	연인セックス時のゴム装着
+;이벤트 관련		FLAG:802	판정식：CONFIG_CHECK_EVENT_F(num)
+;0	보스 습격 이벤트
+;1	새끼 촉수 요바이 (子触手の夜這い)
+;2	동료에 의한 요바이
+;3	악질 시민 이벤트
+;4	잡몹과의 전투
+;5	악질 시민과의 전투
+;6	연인 섹스 시의 콘돔 장착
 ;
-;ゲームバランス変更	FLAG:803	判定式：CONFIG_CHECK_BALANCE_F(num)
-;0	捕獲촉수遭遇率アップ
-;1	索敵ターゲット
-;2	オート振り解き
-;3	搾精強化
-;4	返り血
-;5	최종 보스強化
-;6	力尽きても変身が解けない　※체력, 기력低下や絶頂や敗北時に変身解除されない
-;7	A감각が低い時の쾌A増加
-;8	敵が行動不能のヒロインを正確に狙う
+;게임 밸런스 변경	FLAG:803	판정식：CONFIG_CHECK_BALANCE_F(num)
+;0	유폐 촉수 조우율 향상
+;1	색적 타겟
+;2	자동 풀어내기
+;3	착정 강화
+;4	촉수혈 (返り血 피가 튐, 촉수의 피를 뒤집어 써서 몸이 민감해지는 시스템)
+;5	최종 보스 강화
+;6	강제 변신 해제 무효 (力尽きても変身解除しない)　※체력, 기력 저하나 절정이나 패배 시에 변신이 해제되지 않음
+;7	A감각이 낮을 시 쾌A 증가
+;8	행동 불능 시 확정 피격 (敵が行動不能のヒロインを正確に狙う)
 ;
-;유폐・흑화オプション	FLAG:804	判定式：CONFIG_CHECK_PRISON_F(num)
-;0	남자の敗北유폐時に女体化
-;1	ヒロイン흑화機能を使用する
-;2	┣ただし苗床取得キャラは産む機械に(묘상화取得後は흑화しにくい＝取り込まれ死亡コースに乗りやすい)
-;3	┣非戦闘員持ちと희롱특화체질は흑화しない
-;4	┗흑화時に容姿を変更する
-;5	  ┣髪型の変更を許可する
-;6	  ┣머리색の変更を許可する
-;7	  ┣目の色の変更を許可する
-;8	  ┗肌の色の変更を許可する
-;9	악질 시민による유폐イベントを許可する
+;유폐・흑화 옵션	FLAG:804	판정식：CONFIG_CHECK_PRISON_F(num)
+;0	남자의 패배 유폐 시 여체화
+;1	캐릭터 흑화 기능
+;2	┣단 묘상화 취득 시 임신 셔틀화(묘상화 취득 후에는 흑화하기 어려움＝거두어져 사망 코스를 밟기 쉬움)
+;3	┣비전투원 및 희롱특화체질의 흑화 무효
+;4	┗흑화 시의 외관 변화
+;5	  ┣헤어 스타일 변경을 허가한다
+;6	  ┣머리색 변경을 허가한다
+;7	  ┣눈동자 색 변경을 허가한다
+;8	  ┗피부색 변경을 허가한다
+;9	악질 시민에 의한 유폐 이벤트를 허가한다
 
-;その他オプション	FLAG:805	判定式：CONFIG_CHECK_OTHER_F(num)
-;0	娘育成(ONなら촉수に孕まされても娘を임신する場合がある)
-;1	항복한다コマンドを使用する
-;2	┏임신・出産機能を使用しない(↓と択一)
-;3	┗사후피임약使用可能モード(↑と択一)
-;4	애널プレイではＶに挿入しない
-;5	基本처녀を失わない(全員に성처녀をつけるのと同じ効果)
-;6	裏プロフィール(감각進行時、パーソナリティ欄の下部にエロverがなんか出る　プロフィール설정時のみ反映)
-;7	FLASH NEWSにバイラルメディア(有害ブログ)を追加する
-;8	特殊戦闘イベント中の衣装一時変更を無効化
+;기타 옵션	FLAG:805	판정식：CONFIG_CHECK_OTHER_F(num)
+;0	딸 육성 (ON 이라면 촉수에게 잉태되어도 딸을 임신할 수도 있게 된다)
+;1	항복 커맨드 사용
+;2	┏임신・출산 기능을 사용하지 않는다(↓둘 중 택1)
+;3	┗사후 피임약 사용 가능 모드(↑둘 중 택1)
+;4	애널 플레이 도중 Ｖ삽입 금지
+;5	기본 처녀를 잃지 않는다 (전원에게 성처녀를 붙이는 것과 동일한 효과)
+;6	뒷 프로필(감각이 오를 시, 개성 란의 하단부에 에로 ver인지 뭔지가 나온다　프로필 설정 시에만 반영)
+;7	FLASH NEWS에 바이럴 미디어(유해 블로그) 추가
+;8	특수 전투 이벤트 중 의상 일시 변경 무효화
 ;--------------------------------------------------
 ;컨피그
 @CONFIG(FROM)
-;호출元"mainmenu"か？
+;호출 전 "mainmenu"인가?
 #DIMS FROM,1
 
 #DIM PAGE
@@ -87,117 +87,117 @@ IF PAGE == 0
 
 	PRINT ★
 	SETCOLOR 255,255,150
-	PRINTFORML グローバル필터（全セーブデータ共通、グローバル環境に自動上書き）
+	PRINTFORML 글로벌 필터（전체 세이브 데이터 공통, 글로벌 환경에 자동 덮어쓴다）
 	RESETCOLOR
-	PRINTFORML 　[1000]性嗜好필터
-	PRINTFORML 　[2000]잡몹적 필터
-	PRINTFORML 　[3000]非戦闘行動時の自動変身
-	;PRINTFORML 　[4000]キャラメイクのランダム幅	;未完成！
+	PRINTFORML 　[1000] 성 기호 필터
+	PRINTFORML 　[2000] 잡몹 필터
+	PRINTFORML 　[3000] 비전투 행동 시의 자동 변신
+	;PRINTFORML 　[4000] 캐릭터 메이킹 랜덤폭	;미완성！
 	PRINTL
 	DRAWLINE
 	PRINT ★
 	SETCOLOR 255,255,150
-	PRINTFORML 컨피그関係（セーブデータ個別に설정）
+	PRINTFORML 컨피그 관련（세이브 데이터 개별로 설정）
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_MAIN_F(0) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[0]グローバル環境の컨피그설정を使用する
+	PRINTFORML 　[0] 글로벌 환경의 컨피그 설정을 사용한다
 	RESETCOLOR
-	PRINTFORML 　[1]SAVE GLOBAL (グローバル環境に手動でセーブ)
-	PRINTFORML 　[2]LOAD GLOBAL (グローバル環境から手動ロード)
+	PRINTFORML 　[1] SAVE GLOBAL (글로벌 환경에 수동 저장)
+	PRINTFORML 　[2] LOAD GLOBAL (글로벌 환경에서 수동 로드)
 
 	PRINT 　●
 	SETCOLOR 255,120,60
-	PRINTFORML 画面表示関係
+	PRINTFORML 화면 표시 관련
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_SCREEN_F(0) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[10]素質をカテゴリ分けして表示する
+	PRINTFORML 　[10] 소질을 카테고리로 나누어 표시한다
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_SCREEN_F(1) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[11]戦闘中に調教스테이터스 상승を表示する
+	PRINTFORML 　[11] 전투 중에 조교 스테이터스 상승을 표시한다
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_SCREEN_F(2) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[12]戦闘中のコマンドをカテゴリ分けして表示する
+	PRINTFORML 　[12] 전투 중의 커맨드를 카테고리로 나누어 표시한다
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_SCREEN_F(3) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[13]一部ウェイトの削減
+	PRINTFORML 　[13] 일부 WAIT 구문 삭감
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_SCREEN_F(4) == 0
 		SETCOLOR 105,105,105
-	;元々は「素質消去後に」だったけど、
-	;現状では「미성숙」除去時にその旨出すか否の判定一点にしか使われてないっぽいです＠社会派
-	PRINTFORML 　[14]「미성숙」消去後に代替素質を表示する
+	;원래는「소질 소거 후에(素質消去後に)」였으나,
+	;현재로서는「미성숙」제거 시에 그 취지를 낼지 말지의 판정 한 곳 밖에 사용되지 않는 것 같습니다 ＠사회파
+	PRINTFORML 　[14]「미성숙」소거 후에 대체 소질을 표시한다
 	RESETCOLOR
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_SCREEN_F(5) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[15]%CONFIG_CHECK_SCREEN_F(5) == 0 ? "▼" # "▲"%戦闘画面に調教스테이터스の一覧を表示する
+	PRINTFORML 　[15]%CONFIG_CHECK_SCREEN_F(5) == 0 ? "▼" # "▲"%전투 화면에 조교 스테이터스 일람을 표시한다
 	RESETCOLOR
 	IF CONFIG_CHECK_SCREEN_F(5) == 1
 		SETCOLOR 120,255,255
 		SIF CONFIG_CHECK_SCREEN_F(6) == 0
 			SETCOLOR 105,105,105
-		PRINTFORML 　 ┣[16]表示位置を下部に移動
+		PRINTFORML 　 ┣[16] 표시 위치를 하단부로 이동
 		RESETCOLOR
 		SETCOLOR 120,255,255
 		SIF CONFIG_CHECK_SCREEN_F(7) == 0
 			SETCOLOR 105,105,105
-		PRINTFORML 　 ┗[17]表示位置を可変にする
+		PRINTFORML 　 ┗[17] 표시 위치를 가변으로 한다
 		RESETCOLOR
-		;8(18)番は内部で使用(1…収納状態　0…展開状態)
+		;8(18)번은 내부에서 사용(1…수납 상태　0…전개 상태)
 	ENDIF
 
 	PRINT 　●
 	SETCOLOR 255,120,120
-	PRINTFORML イベント関連
+	PRINTFORML 이벤트 관련
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_EVENT_F(0) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[30]보스 촉수の襲撃
+	PRINTFORML 　[30] 보스 촉수의 습격
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_EVENT_F(1) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[31]새끼 촉수の夜這い
+	PRINTFORML 　[31] 새끼 촉수 요바이
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_EVENT_F(2) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[32]仲間による夜這い
+	PRINTFORML 　[32] 동료에 의한 요바이
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_EVENT_F(3) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[33]악질 시민イベント
+	PRINTFORML 　[33] 악질 시민 이벤트
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_EVENT_F(4) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[34]잡몹적との戦闘
+	PRINTFORML 　[34] 잡몹과의 전투
 	RESETCOLOR
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_EVENT_F(5) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[35]악질 시민との戦闘
+	PRINTFORML 　[35] 악질 시민과의 전투
 	RESETCOLOR
 	
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_EVENT_F(6) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[36]연인セックス時のゴム装着
+	PRINTFORML 　[36] 연인 섹스 시의 콘돔 장착
 	RESETCOLOR
 	
 	;PRINTL 
@@ -212,180 +212,183 @@ IF PAGE == 0
 ELSEIF PAGE == 1
 	PRINT ★
 	SETCOLOR 255,255,150
-	PRINTFORML 컨피그関係（続き）
+	PRINTFORML 컨피그 관련
 	
 	PRINT 　●
 	SETCOLOR 120,60,255
-	PRINTFORML ゲームバランス変更
+	PRINTFORML 게임 밸런스 변경
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_BALANCE_F(0) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[50]捕獲촉수遭遇率アップを使用する　　　　難易度：低下
+	PRINTFORML 　[50] 유폐 촉수 조우율 향상　　　　　　　　난이도：감소
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_BALANCE_F(1) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[51]索敵ターゲットを使用する　　　　　　　難易度：低下
+	PRINTFORML 　[51] 색적 타겟 기능　　　　　　　　　　　 난이도：감소
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_BALANCE_F(2) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[52]オート振り解き機能を使用する　　　　　難易度：低下
+	PRINTFORML 　[52] 자동 풀어내기 기능　　　　　　　　　 난이도：감소
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_BALANCE_F(3) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[53]搾精強化機能を使用する　　　　　　　　難易度：低下
+	PRINTFORML 　[53] 착정 강화 기능　　　　　　　　　　　 난이도：감소
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_BALANCE_F(4) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[54]보스 촉수撃破で返り血　　　　　　　　　難易度：上昇
+	PRINTFORML 　[54] 촉수혈 기능　　　　　　　　　　　　　난이도：상승
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_BALANCE_F(5) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[55]최종 보스強化機能　　　　　　　　　　　難易度：上昇
+	PRINTFORML 　[55] 최종 보스 강화 기능　　　　　　　　　난이도：상승
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_BALANCE_F(6) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[56]集中が乱れても変身を維持する　　　　　難易度：低下（大）
+	;원문은 集中が乱れても変身を維持する
+	PRINTFORML 　[56] 강제 변신 해제 무효　　　　　　　　　난이도：대감소
 	
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_BALANCE_F(7) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[57]A감각が低い時の쾌A増加　　　　　　　難易度：上昇
+	PRINTFORML 　[57] A감각이 낮을 시 쾌A 증가　　　　　　 난이도：상승
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_BALANCE_F(8) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[58]行動不能のヒロインを敵が正確に狙う　　難易度：上昇
+	;원문은 行動不能のヒロインを敵が正確に狙う
+	PRINTFORML 　[58] 행동 불능 시 확정 피격　　　　　　　 난이도：상승
 
 	RESETCOLOR
 	PRINTL 
 
 	PRINT 　●
 	SETCOLOR 60,255,120
-	PRINTFORML 유폐・흑화関連オプション
+	PRINTFORML 유폐・흑화 관련 설정
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_PRISON_F(0) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[60]남자の敗北時に女体化させる
+	PRINTFORML 　[60] 남자 캐릭터 패배 시 여체화
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_PRISON_F(1) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[61]%CONFIG_CHECK_PRISON_F(1) == 0 ? "▼" # "▲"%ヒロイン흑화機能を使用する
-	;↑から派生
+	PRINTFORML 　[61]%CONFIG_CHECK_PRISON_F(1) == 0 ? "▼" # "▲"%캐릭터 흑화 기능
+	;↑에서 파생
 	IF CONFIG_CHECK_PRISON_F(1) == 1
 		SETCOLOR 120,255,255
 		SIF CONFIG_CHECK_PRISON_F(2) == 0
 			SETCOLOR 105,105,105
-		PRINTFORML 　 ┣[62]ただし묘상화したヒロインは産む機械として取り込む
+		;단 묘상화 취득 시 임신 셔틀화
+		PRINTFORML 　[62]┣유폐：묘상화된 캐릭터는 임신 셔틀로서 거두어진다
 		SETCOLOR 120,255,255
 		SIF CONFIG_CHECK_PRISON_F(3) == 0
 			SETCOLOR 105,105,105
-		PRINTFORML 　 ┣[63]ただし희롱특화체질を持たない戦闘員だけが흑화する
+		PRINTFORML 　[63]┣흑화：희롱특화체질이 없는 전투원만 흑화한다
 
 		SETCOLOR 120,255,255
 		SIF CONFIG_CHECK_PRISON_F(4) == 0
 			SETCOLOR 105,105,105
-		PRINTFORML 　 ┣[64]%CONFIG_CHECK_PRISON_F(4) == 0 ? "▼" # "▲"%흑화時に容姿を変更する
+		PRINTFORML 　[64]┣%CONFIG_CHECK_PRISON_F(4) == 0 ? "▼" # "▲"%흑화 시 외관 변화
 		RESETCOLOR
 		IF CONFIG_CHECK_PRISON_F(4) == 1
 			SETCOLOR 120,255,255
 			SIF CONFIG_CHECK_PRISON_F(5) == 0
 				SETCOLOR 105,105,105
-			PRINTFORML 　　 ┣[65]髪型の変更を許可する
+			PRINTFORML 　　[65]┣흑화：헤어 스타일 변경을 허가한다
 			RESETCOLOR
 			SETCOLOR 120,255,255
 			SIF CONFIG_CHECK_PRISON_F(6) == 0
 				SETCOLOR 105,105,105
-			PRINTFORML 　　 ┣[66]머리색の変更を許可する
+			PRINTFORML 　　[66]┣흑화：머리색 변경을 허가한다
 			RESETCOLOR
 			SETCOLOR 120,255,255
 			SIF CONFIG_CHECK_PRISON_F(7) == 0
 				SETCOLOR 105,105,105
-			PRINTFORML 　　 ┣[67]目の色の変更を許可する
+			PRINTFORML 　　[67]┣흑화：눈동자 색 변경을 허가한다
 			RESETCOLOR
 			SETCOLOR 120,255,255
 			SIF CONFIG_CHECK_PRISON_F(8) == 0
 				SETCOLOR 105,105,105
-			PRINTFORML 　　 ┗[68]肌の色の変更を許可する
+			PRINTFORML 　　[68]┗흑화：피부색 변경을 허가한다
 			RESETCOLOR
 		ENDIF
 
 		SETCOLOR 120,255,255
 		SIF CONFIG_CHECK_PRISON_F(9) == 0
 			SETCOLOR 105,105,105
-		PRINTFORML 　 ┗[69]【촉수의포로】無しでも세뇌ではなく흑화する
+		PRINTFORML 　[69]┗【촉수의포로】가 없어도 세뇌하지 않고 흑화한다
 	ENDIF
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_PRISON_F(10) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[70]악질 시민による유폐を許可する
+	PRINTFORML 　[70] 악질 시민에 의한 유폐
 	RESETCOLOR
 	PRINTL 
 
 	PRINT 　●
 	SETCOLOR 60,255,120
-	PRINTFORML その他オプション
+	PRINTFORML 기타 설정
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_OTHER_F(0) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[71]촉수の子種からも娘を임신する可能性がある
+	PRINTFORML 　[71] 촉수의 정자에서도 딸을 임신할 가능성이 있다
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_OTHER_F(1) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[72]항복한다コマンドを使用する
+	PRINTFORML 　[72] 항복 커맨드를 사용한다
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_OTHER_F(2) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[73]┏임신出産機能を封印する
+	PRINTFORML 　[73]┏임신・출산 기능을 봉인한다（택1）
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_OTHER_F(3) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[74]┗避妊のために사후피임약を使用する
+	PRINTFORML 　[74]┗피임을 위한 사후피임약을 사용한다（택1）
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_OTHER_F(4) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[75]Ａ責め공격では常に後ろの穴にのみ挿入する
+	PRINTFORML 　[75] Ａ고문 공격 도중 Ｖ삽입 금지
 	RESETCOLOR
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_OTHER_F(5) == 0
 		SETCOLOR 105,105,105
-		;非イベントにおける필터、および性공격に伴う처녀 상실抑制
-		;「にくく」というかほぼ完全に抑制される
-		;　例外がＶ촉수유폐中のＶ責め、Ｖ촉수だし意図的な例外だと思われる
-	PRINTFORML 　[76]ヒロインが常に성처녀となる（基本的に처녀を喪失しない）
+		;비이벤트에 대한 필터 및 성공격에 따른 처녀 상실 억제
+		;「어렵게」라고 할까 거의 완전히 억제된다
+		;　예외로 Ｖ촉수 유폐 중의 Ｖ고문, 이름부터 Ｖ촉수니까 의도적인 예외라고 생각된다
+	PRINTFORML 　[76] 캐릭터의 성처녀 유지（기본적으로 처녀를 상실하지 않음）
 	RESETCOLOR
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_OTHER_F(6) == 0
 		SETCOLOR 105,105,105
-		;性開発時に「●●●されるのが好き」みたいな表記が出てくる
-		;裏プロフィールって響きが淫猥だからあえて多くは語らないこの表記でいいと思う
-		;※表のプロフィールが설정されていないと機能しない
-	PRINTFORML 　[77]プロフィール설정時に裏プロフィールも使用する
+		;성 개발 시에「●●●당하는 게 좋아」와 같은 표기가 나온다
+		;뒷 프로필이라는 말이 외설적이기 때문에 굳이 많은 말은 하지 않는 이 표기로 좋다고 생각한다
+		;※캐릭터 프로필이 설정되어 있지 않으면 기능하지 않는다
+	PRINTFORML 　[77] 프로필 설정 시에 뒷 프로필도 사용한다
 	RESETCOLOR
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_OTHER_F(7) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[78]FLASH NEWSにバイラルメディア(有害ブログ)を追加する
+	PRINTFORML 　[78] FLASH NEWS에 바이럴 미디어(유해 블로그) 추가
 	RESETCOLOR
 
 	SETCOLOR 120,255,255
 	SIF CONFIG_CHECK_OTHER_F(8) == 0
 		SETCOLOR 105,105,105
-	PRINTFORML 　[79]強制衣装変更イベントでも설정通りの衣装を使う
+	PRINTFORML 　[79] 강제 의상 변경 이벤트의 의상 변경 무효
 	RESETCOLOR
 
 	;
@@ -405,13 +408,13 @@ ELSEIF PAGE == 1
 		PRINTL
 		PRINTL
 	ENDIF
-	;レイアウトを０ページ目に合わせるために改行を入れる
+	;레이아웃을 0페이지에 맞추기 위해 줄 바꿈을 넣는다
 ENDIF
 PRINTL 
-PRINTFORML [100]ページ切り替え
+PRINTFORML [100] 페이지 전환
 SIF FROM!="mainmenu"
-	PRINTFORM [999]現在のセーブデータのみに適用して돌아간다　　
-	PRINTFORML [9999]グローバル설정に保存して돌아간다
+	PRINTFORM [999] 현재의 세이브 데이터에만 적용하고 돌아간다　　
+	PRINTFORML [9999] 글로벌 설정에 저장하고 돌아간다
 $INPUT_LOOP
 INPUT
 IF RESULT == 100
@@ -430,7 +433,7 @@ ELSEIF RESULT == 9999
 	GLOBAL:15 = FLAG:805
 	SAVEGLOBAL
 
-;컨피그설정関係
+;컨피그 설정 관련
 ELSEIF RESULT == 0
 	INVERTBIT FLAG:800, 0
 	GOTO MASTER_LOOP
@@ -441,18 +444,18 @@ ELSEIF RESULT == 1
 	GLOBAL:14 = FLAG:804
 	GLOBAL:15 = FLAG:805
 	SAVEGLOBAL
-	PRINTL 現在のグローバル컨피그を保存しました。
-	PRINTL ゲームをロードするたびに自動で適用されます。
+	PRINTL 현재의 글로벌 컨피그를 저장했습니다.
+	PRINTL 이후 게임을 로드할 때마다 자동으로 적용됩니다.
 	PRINTW 
 	GOTO MASTER_LOOP
 ELSEIF RESULT == 2
-	PRINTW 【グローバル컨피그설정を読み込みました】
+	PRINTW 【글로벌 컨피그 설정을 불러왔습니다.】
 	FLAG:801 = GLOBAL:11
 	FLAG:802 = GLOBAL:12
 	FLAG:803 = GLOBAL:13
 	FLAG:804 = GLOBAL:14
 	FLAG:805 = GLOBAL:15
-	;グローバルのアップデート
+	;글로벌 업데이트
 	CALL UPDATE_GLOBAL
 	GOTO MASTER_LOOP
 ELSEIF RESULT == 1000
@@ -467,11 +470,11 @@ ELSEIF RESULT == 3000
 ELSEIF RESULT == 4000
 	CALL CONFIG_C
 	GOTO MASTER_LOOP
-;画面表示関係
+;화면 표시 관련
 ELSEIF RESULT >= 10 && RESULT <= 17
 	INVERTBIT FLAG:801, RESULT - 10
 	GOTO MASTER_LOOP
-;イベント関係
+;이벤트 관련
 ELSEIF RESULT >= 30 && RESULT <= 34
 	INVERTBIT FLAG:802, RESULT - 30
 	SIF CONFIG_CHECK_EVENT_F(3) == 0 || CONFIG_CHECK_EVENT_F(4) == 0
@@ -484,20 +487,20 @@ ELSEIF RESULT == 35
 ELSEIF RESULT == 36
 	INVERTBIT FLAG:802, RESULT - 30
 	GOTO MASTER_LOOP
-;ゲームバランス変更
+;게임 밸런스 변경
 ELSEIF RESULT >= 50 && RESULT <= 58
 	INVERTBIT FLAG:803, RESULT - 50
 	GOTO MASTER_LOOP
-;유폐・흑화関係
+;유폐・흑화 관련
 ELSEIF RESULT >= 60 && RESULT <= 70
 	INVERTBIT FLAG:804, RESULT - 60
 	GOTO MASTER_LOOP
-;その他オプション　※常時避妊／사후피임약は択一
+;기타 설정　※상시 피임／사후피임약은 택일
 ELSEIF RESULT == 73 || RESULT == 74
 	INVERTBIT FLAG:805, RESULT-71
 	CLEARBIT FLAG:805, 2+(74-RESULT)
 	GOTO MASTER_LOOP
-;その他オプション
+;기타 설정
 ELSEIF RESULT >= 71 && RESULT <=79
 	INVERTBIT FLAG:805, RESULT - 71
 	GOTO MASTER_LOOP
@@ -508,7 +511,7 @@ ELSE
 ENDIF
 
 ;--------------------------------------------------------------------------------
-;フラグチェック
+;플래그 체크
 @CONFIG_CHECK_MAIN_F(ARG)
 #FUNCTION
 LOCAL = GETBIT (FLAG:800,ARG)
